src/test/ui/closures/coerce-unsafe-closure-to-unsafe-fn-ptr.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/coerce-unsafe-closure-to-unsafe-fn-ptr.rs:2:31
   |
LL |     let _: unsafe fn() = || { ::std::pin::Pin::new_unchecked(&0_u8); };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
